src/test/ui/issues/issue-32709.stderr
error[E0277]: `?` couldn't convert the error to `()`
  --> $DIR/issue-32709.rs:4:11
   |
LL | fn a() -> Result<i32, ()> {
   |           --------------- expected `()` because of this
LL |     Err(5)?;
   |           ^ the trait `From<{integer}>` is not implemented for `()`
   |
   = note: the question mark operation (`?`) implicitly performs a conversion on the error value using the `From` trait
   = note: required because of the requirements on the impl of `FromResidual<Result<Infallible, {integer}>>` for `Result<i32, ()>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
